############################################################
# avian/test
############################################################

test_jni_sources = files(
  'jni.cpp',
)

test_java_sources = files(
  'DefineClass.java',
  'List.java',
  'Strings.java',
  'MessageFormatTest.java',
  'Enums.java',
  'FutureTaskTest.java',
  'LinkedBlockingQueueTest.java',
  'ZipOutputStreamTest.java',
  'Switch.java',
  'Finalizers.java',
  'Subroutine.java',
  'DivideByZero.java',
  'StackOverflow.java',
  'Regex.java',
  'Dates.java',
  'Tree.java',
  'TimeUnitConversions.java',
  'Files.java',
  'Initializers.java',
  'Collections.java',
  'Datagrams.java',
  'Reflection.java',
  'OutOfMemory.java',
  'QueueHelper.java',
  'MemoryRamp.java',
  'InvokeDynamic.java',
  'Floats.java',
  'Zip.java',
  'Annotations.java',
  'Observe.java',
  'GC.java',
  'Misc.java',
  'Integers.java',
  'Buffers.java',
  'StringBuilderTest.java',
  'Logging.java',
  'Busy.java',
  'Hello.java',
  'JNI.java',
  'UrlTest.java',
  'Simple.java',
  'ConcurrentHashMapTest.java',
  'Threads.java',
  'EnumSetTest.java',
  'CompletionServiceTest.java',
  'ArrayDequeTest.java',
  'Serialize.java',
  'BufferedInputStreamTest.java',
  'Exceptions.java',
  'BitsetTest.java',
  'FormatStrings.java',
  'ArraysTest.java',
  'Sockets.java',
  'UnsafeTest.java',
  'LazyLoading.java',
  'NullPointer.java',
  'Proxies.java',
  'Longs.java',
  'DequeHelper.java',
  'References.java',
  'AllFloats.java',
  'AtomicTests.java',
  'Processes.java',
  'Trace.java',
  'FileOutput.java',
  'avian/testing/annotations/Color.java',
  'avian/testing/annotations/Test.java',
  'avian/testing/annotations/TestComplex.java',
  'avian/testing/annotations/TestEnum.java',
  'avian/testing/annotations/TestInteger.java',
  'avian/testing/Asserts.java',
  'avian/TestReflection.java',
)

test_java_2_sources = files(
  'Subroutine.java',
)

test_java_extra_sources = files(
  'extra/SendFile.java',
  'extra/Coroutines.java',
  'extra/ComposableContinuations.java',
  'extra/Tails.java',
  'extra/DumpStats.java',
  'extra/QueryDump.java',
  'extra/DynamicWind.java',
  'extra/RuntimeExec.java',
  'extra/Sockets.java',
  'extra/Continuations.java',
  'extra/SendServer.java',
  'extra/Memory.java',
  'extra/PrintDump.java',
)
